# opendata-pdf-to-csv

./: README.md  action.py  constants.py  dim-lock.json  dim.json  main.py  prefecture.py  pyproject.toml
.github/workflows/: update.yml
output_files/: 01_北海道.csv  02_青森県.csv  03_岩手県.csv  04_宮城県.csv  05_秋田県.csv  06_山形県.csv  07_福島県.csv  08_茨城県.csv  09_栃木県.csv  10_群馬県.csv  11_埼玉県.csv  12_千葉県.csv  13_東京都.csv  14_神奈川県.csv  15_新潟県.csv  16_富山県.csv  17_石川県.csv  18_福井県.csv  19_山梨県.csv  20_長野県.csv  21_岐阜県.csv  22_静岡県.csv  23_愛知県.csv  24_三重県.csv  25_滋賀県.csv  26_京都府.csv  27_大阪府.csv  28_兵庫県.csv  29_奈良県.csv  30_和歌山県.csv  33_岡山県.csv  34_広島県.csv  35_山口県.csv  36_徳島県.csv  38_愛媛県.csv  39_高知県.csv  41_佐賀県.csv  42_長崎県.csv  43_熊本県.csv  44_大分県.csv  (+98 more)
